--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-<head> editaremos dps </head>
+<html lang="pt-BR>
+<head>
+<link rel="stylesheet"href="style.css">
+  <title> Músicas </title>
+<
+
 <body></body>
 <header> cabeçalho </header>
 <h1> título do conteúdo </h1>
