--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <head>
 <link rel="stylesheet"href="style.css">
   <title> Músicas </title>
-<
-
-<body></body>
-<header> cabeçalho </header>
-<h1> título do conteúdo </h1>
+</head>
+  <body>
+<header> Minhas músicas favoritas</header>
+<selection>
+<div>
+<h1> casal Bonnie e Clyde </h1>
 <p>  parágrafo sobre </p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/vd4GsO04obg?si=eV_HxM_JBmKUuJVA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></body>
