--- a/index.html
+++ b/index.html
@@ -18,11 +18,8 @@
     <section class = "categoria">
       <h2> Mais músicas</h2>
       <div class = "categoria-videos">
-        <a href = "https://www.youtube.com/watch?v=A_4cugDBBjs">
-          <img src =/>
-        </a>
-          <a href = "">
-          <img src =/>
+          <a href = "https://www.youtube.com/watch?v=P8nYqA3NyIc">
+          <img src =https://img.youtube.com/vi/P8nYqA3NyIc/maxresdefault.jpg/>
         </a>
       </div>
     </section>
